--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.3",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "npm": "^6.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
